# pysrim-himfib

./: LICENSE  README.md  main.py  ni.py  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
