[tool.poetry]
name = "pysrim-himfib"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "pysrim_himfib"}]

[tool.poetry.dependencies]
python = ">=3.7,<3.9"
numpy = "1.21.6"
matplotlib = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
